	safely.

	Using cst_time_memcpy by Christophe Meessen instead
	of libc's memcpy: constant time memcpy is much more
	secure than the default, especially in our context.

	Anonymous encrypted files are now signed with primary
	secret key, so that the recipient will be able to
	verify the signature.

	Added -v support for -d and -e.

	Removed endian conversion stuff. see util.c for details.


0.3.0
	Changed publuc key signature storage, previously
	I didn't add the actual signature, therefore a
	public key could have been verified only during
	import but never thereafter. This affects exported
	public keys (32 byte larger) and vault storage,
	but is backwards compatible.

	Added JSON output support using libjansson (-j),
	supported by -t, -p, -s and -K.

	Abandoned YAML, perl and C key export support,
	better doing one external format but doing it
	good. Also, I had no importers for those formats.

	Removed -y for YAML vault export as well. Maybe
	I'll add a parameter to -p or -s so one can
	select which key[s] to export.

	removed hand-written padding stuff and using
	libsodiums _easy() functions for crypto now
	instead of the raw nacl ones. instead we use
	the _easy variants of the crypto_*box functions,
	which libsodium provides. I didn't use them so
	far because I wasn't aware of their existence.

	using secure memory where applicable.

	changed encryption protocol, now we're using
	counter mode for stream encryption. we use the
	nonce, which is required by crypto_secretbox
	anyway, as a counter. our counter has a variable
	size and starts with one byte. the first byte
	of the nonce signifies the counter size and the
	following byte(s) are used as the counter. if it
	is larger than one byte, it will be converted to
	big endian. maximum possible counter size is 184
	bit, current maximum implemented counter size is
	64 bit.

	removed CBC mode support, it wasn't enabled by
	default anyway.

	using libsodium memory protection facilities where