@@ -4,10 +4,10 @@
 <head>
 <title></title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<link rev="made" href="mailto:scip@nubic.(none)" />
+<link rev="made" href="mailto:root@localhost" />
 </head>
 
-<body>
+<body style="background-color: white">
 
 
 
